--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -22,12 +21,14 @@
     "angular-persistence": "^1.0.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.9.3",
     "cloudinary": "^1.30.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "fs": "^0.0.1-security",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
@@ -47,7 +48,7 @@
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
     "eslint": "^8.17.0",
